--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^3.7.0",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
