--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "apollo-server": "^3.7.0",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "prisma": "^3.14.0"
   }
 }
